<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/font_small">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/common_create_task"
            android:textColor="@color/black"
            android:textSize="@dimen/font_large"
            app:layout_constraintBottom_toTopOf="@+id/editTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:hint="@string/hint_title"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescription">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/font_tiny"
                android:backgroundTint="@color/md_blue_grey_500"
                android:minWidth="@dimen/dp_132"
                android:minHeight="@dimen/dp_52"
                android:text="@string/common_cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_normal" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/font_tiny"
                android:minWidth="@dimen/dp_132"
                android:minHeight="@dimen/dp_52"
                android:text="@string/common_ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_normal" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
